<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#644E9F"
                    android:minHeight="?attr/actionBarSize"
                    android:theme="?attr/actionBarTheme"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:title="@string/cadastro_de_pessoa"
                    app:titleTextColor="#FFFFFF" />

                <ImageView
                    android:id="@+id/infoBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:layout_marginEnd="9dp"
                    android:clickable="true"
                    android:contentDescription="@string/button"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/toolbar"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/info_24" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.appbar.AppBarLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/linLayName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="?attr/actionBarSize"
        android:orientation="horizontal"
        android:paddingHorizontal="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name" />

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="no"
            android:inputType="text"
            android:labelFor="@id/name" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linLayAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linLayName"
        android:orientation="horizontal"
        android:paddingHorizontal="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age" />

        <EditText
            android:id="@+id/age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="no"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linLayCPF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linLayAge"
        android:orientation="horizontal"
        android:paddingHorizontal="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cpf" />

        <EditText
            android:id="@+id/cpf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="no"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linLayRG"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linLayCPF"
        android:orientation="horizontal"
        android:paddingHorizontal="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rg" />

        <EditText
            android:id="@+id/rg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="no"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linLaySexo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linLayRG"
        android:orientation="horizontal"
        android:paddingHorizontal="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sex" />

        <EditText
            android:id="@+id/sexo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="no"
            android:inputType="text" />
    </LinearLayout>

    <Button
        android:id="@+id/saveBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="8dp"
        android:text="@string/save" />
</RelativeLayout>